# fw-d3b-get-tumor-intensity-values

./: Dockerfile  README.md  manifest.json  pyproject.toml  requirements.txt  run.py
fw_gear_functions/: main.py  parser.py
