[tool.poetry]
name = "fw_gear_functions"
version = "0.0.0"
description = "Extract tumor intensity values"
authors = ["D3b-TIRU <flywheel@d3b.center>"]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://github.com/d3b-center/fw-d3b-get-tumor-intensity-values"

[tool.poetry.dependencies]
python = "^3.9"
flywheel-gear-toolkit = "^0.6"
flywheel-sdk = "^16.0.0"
fw-core-client = "^1.0.2"
nibabel = "3.2.2"
numpy = "1.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
